--- a/src/pages/HelloMessage/HelloMessage.module.css
+++ b/src/pages/HelloMessage/HelloMessage.module.css
@@ -1,35 +1,34 @@
-.content_wrapper{
-    height: fit-content;
-    width: 100%;
-   
+.content_wrapper {
+  height: fit-content;
+  width: 100%;
 }
 
-.main_info_wrapper{
-    display: flex;
-    min-height: 100vh;
-    height: 100vh;
-    background-color: #4c59a9;
-    align-items: center;
-    justify-content: center;
+.main_info_wrapper {
+  display: flex;
+  min-height: 90vh;
+  height: 90vh;
+  background-color: rgb(22, 122, 255);
+  align-items: center;
+  justify-content: center;
 }
-.about_project_wrapper{
-    display: flex;
-    min-height: 100vh;
-    height: 100vh;
-    padding: 20px 50px;
-    justify-content: center;
+.about_project_wrapper {
+  display: flex;
+  min-height: 500px;
+  height: 500px;
+  padding: 20px 50px;
+  justify-content: center;
 }
-.stats_info_wrapper{
-    display: flex;
-    height: 100vh;
-    padding: 20px 50px;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
+.stats_info_wrapper {
+  display: flex;
+  height: 350px;
+  padding: 40px 20px;
+  justify-content: center;
+  text-align: center;
+  align-items: start;
 }
-.news_wrapper{
-    display: flex;
-    min-height: 100vh;
-    height: fit-content;
-    padding: 20px 50px;
+.news_wrapper {
+  display: flex;
+  min-height: 100vh;
+  height: fit-content;
+  padding: 20px 50px;
 }
