--- a/src/pages/HelloMessage/HelloMessage.module.css
+++ b/src/pages/HelloMessage/HelloMessage.module.css
@@ -28,7 +28,7 @@
 }
 .news_wrapper {
   display: flex;
-  min-height: 100vh;
   height: fit-content;
-  padding: 20px 50px;
+  padding: 20px 60px;
+  margin: 0 0 50px 0;
 }
