--- a/src/components/Contacts/Contacts.module.css
+++ b/src/components/Contacts/Contacts.module.css
@@ -41,3 +41,35 @@
     display: flex;
     flex-direction: column;
 }
+
+
+@media (max-width: 1180px) {
+    .space_container {
+        width: 100%;
+        height: fit-content;
+    }
+    .row_container{
+        width: 100%;
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 300px) {
+    .space_container{
+        padding: 10px;
+    }
+    .image_container{
+        max-width: 280px;
+    }
+    .card_container{
+        width: 200px;
+        justify-content: center;
+        text-align: center;
+    }
+    .card_container{
+        padding: 0;
+    }
+    .text_container{
+        text-align: center;
+    }
+}
