--- a/src/pages/HelloMessage/HelloMessage.module.css
+++ b/src/pages/HelloMessage/HelloMessage.module.css
@@ -7,9 +7,30 @@
   display: flex;
   min-height: 60vh;
   height: 60vh;
-  background-color: rgb(22, 122, 255);
+  background-image: url('../../assets/background.svg');
+  background-repeat: no-repeat;
+  background-clip: border-box;
+  background-size: cover;
+  background-color: rgba(22, 122, 255);
   align-items: center;
   justify-content: center;
+}
+.main_info_parag{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.main_project_title {
+  color: white !important;
+  font-Size: 100px !important;
+  margin: 0 !important;
+}
+.main_project_desc{
+  font-size: 25px;
+  color: white;
+  text-align: start;
+  margin: -5px;
 }
 .about_project_wrapper {
   display: flex;
@@ -17,6 +38,14 @@
   height: 500px;
   padding: 20px 50px;
   justify-content: center;
+}
+.about_project_parag{
+  display: "flex";
+  flex-direction: column;
+  width: 600px;
+}
+.about_project_content{
+  font-size: 25px;
 }
 .stats_info_wrapper {
   display: flex;
@@ -29,5 +58,118 @@
 .news_wrapper {
   display: flex;
   height: fit-content;
-  padding: 20px 60px;
+  padding: 20px;
+}
+.divider_title{
+  font-size: 45px;
+  color: rgb(22, 122, 255);
+  font-weight: 600
+}
+@media (max-width: 1180px) {
+  .about_project_wrapper{
+    display: 'flex';
+    flex-direction: column-reverse;
+    height: fit-content;
+  }
+  .stats_info_wrapper{
+    display: 'flex';
+    flex-wrap: wrap;
+    height: fit-content;
+  }
+  .news_wrapper{
+    display: 'flex';
+    flex-wrap: wrap;
+    height: fit-content;
+  }
+  .news_row_container{
+    justify-content: center;
+  }
+
+}
+
+@media (max-width: 860px) {
+ 
+  .about_project_wrapper{
+    width: 100%;
+    height: fit-content;
+    justify-content: center;
+  }
+  .about_project_parag{
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+    text-align: start;
+  }
+  .about_project_content{
+    font-size: 1.5em;
+    text-overflow: clip;
+  }
+  .divider_title{
+    font-size: 2.5em;
+    color: rgb(22, 122, 255); 
+    font-weight: 600;
+  }
+}
+
+@media (max-width: 750px) {
+  .main_info_wrapper{
+    display: flex;
+    min-height: 30vh;
+    height: 30vh;
+    
+  }
+  .main_info_parag{
+    display: 'flex';
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
+  .main_project_title{
+    font-size: 3.8em !important;
+  }
+  .main_project_desc{
+    font-size: 1em;
+    width: fit-content;
+  }
+}
+
+@media (max-width: 300px) {
+  .about_project_wrapper{
+    display: 'flex';
+    flex-direction: column-reverse;
+    height: fit-content;
+    padding: 10px;
+  }
+  .stats_parag{
+    max-width: 280px;
+    width: fit-content;
+  }
+  .news_wrapper{
+    padding: 10px;
+  }
+  .news_row_container{
+    max-width: 280px;
+  }
+  .main_info_wrapper{
+    display: flex;
+    min-height: 30vh;
+    height: 30vh;
+  }
+  .main_info_parag{
+    display: 'flex';
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+  }
+  .main_project_title{
+    font-size: 2.5em !important;
+  }
+  .main_project_desc{
+    font-size: 1em;
+    width: fit-content;
+  }
+  .divider_title{
+    font-size: 2em;
+  }
 }
